Fix: Nested collapsed nodes wrap unexpectedly (#7)
* chore: remove img tag from readme

* chore: init styling

* chore: fix invalid data attribute name

* chore: update examples, provide themeing example

* chore: run prettier

* chore: update readme

* chore: run prettier

* chore: update changelog

* chore: update package name

* chore: fix #6

--- a/src/styles/JSONNestedNode.module.scss
+++ b/src/styles/JSONNestedNode.module.scss
@@ -3,6 +3,7 @@
 
   &--expandable {
     align-items: var(--json-tree-align-items);
+    display: var(--json-tree-block);
   }
 
   &--expanded {
